# Edgebot

./: .env.example  .gitignore  CONTEXT_MANAGEMENT_HANDOFF.md  MEMORY_MECHANISM_RISK_HANDOFF.md  README.md  pyproject.toml
edgebot/: __init__.py  __main__.py  config.py
edgebot/agent/: autocompact.py  compression.py  consolidator.py  context.py  context_governance.py  loop.py  memory.py  runner.py  subagent.py  token_budget.py  tool_hints.py  tool_repeat.py  tool_results.py  (+1 more)
edgebotdebug/: SKILL.md
memory/: MEMORY.md
tests/: test_ask_user_tool.py  test_ask_user_ui_rendering.py  test_context_autocompact_file_cap.py  test_context_budget_and_history.py  test_context_consolidator.py  test_context_governance_module.py  test_context_project_instructions.py  test_context_summary_injection.py  test_dream_history_sources.py  test_dream_skill_routing.py  test_dream_skip_and_cursor.py  test_dream_tool_scope.py  test_exec_cli.py  test_file_state_isolation.py  test_memory_history_cursor.py  test_memory_workspace_isolation.py  test_multimodal_content.py  test_multimodal_enforce_role_alternation.py  test_multimodal_provider_fallback.py  test_multimodal_run_read.py  test_permission_manager.py  test_permission_orchestration.py  test_permission_prompt_ui.py  test_runner_context_governance.py  test_runner_repeated_tool_call_guard.py  test_runner_tool_status.py  test_shell_workspace_policy.py  test_slash_autocomplete.py  test_subagent_concurrency_limit.py  test_tool_registry_isolation.py  test_tool_result_storage.py  test_workspace_llm_config.py  test_workspace_policy.py
(+74 files in other folders)
